# newton_generator

./: Cargo.toml  README.md
src/: coord.rs  func.pest  func.rs  main.rs  palette.pest  palette.rs
