[package]
name = "newton"
version = "0.1.0"
authors = ["timcryt <tymcrit@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4"
png = "0.17"
rayon = "1"
clap = "2.33"
pest = "2"
pest_derive = "2"
lazy_static = "1"
hex = "0.4"
libloading = "0.8"
